--- a/changelog.txt
+++ b/changelog.txt
@@ -23,9 +23,7 @@ v2.2
 v2.2.1
 -Added some more logging.
 -Fixed OTP reply message in Netscaler, which also fixed support for Pulse Secure.
-v2.2.1.1
--Changed provider URL to another link.
-v2.2.1.2
--Reverted to old provider URL. Made logging easier to find users.
-v2.2.1.3
+v2.2.2
+-Made logging easier to find users.
+v2.2.3
 -Added trimming to the phone number
